temp disabled gradient due to z-index issue with header

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -25,7 +25,8 @@
   background-color: rgba(17, 17, 16, 0.2) !important;
   overflow: visible;
 
-  &::before {
+  /* TODO: temporary disabled due to z-index issue over header */
+  /* &::before {
     position: absolute;
     top: -30%;
     left: 0;
@@ -38,7 +39,7 @@
     width: 100%;
     height: 160%;
     content: '';
-  }
+  } */
 }
 
 mark {
